FINISH SplashScreen and ADD data, SharedPreferencesManager package and ADD LoginScreen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,20 @@
         android:theme="@style/Theme.LemoMall"
         tools:targetApi="31">
         <activity
-            android:name=".ui.HomeScreen"
+            android:name=".LoginScreen"
+            android:exported="false" />
+        <activity
+            android:name=".ui.SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
+        </activity>
+        <activity
+            android:name=".ui.HomeScreen"
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
