FINISH LoginScreen and ADD SignUpScreen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:theme="@style/Theme.LemoMall"
         tools:targetApi="31">
         <activity
-            android:name=".LoginScreen"
+            android:name=".SignUpScreen"
+            android:exported="false" />
+        <activity
+            android:name=".ui.LoginScreen"
             android:exported="false" />
         <activity
             android:name=".ui.SplashScreen"
