--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,11 @@
         android:theme="@style/Theme.LemoMall"
         tools:targetApi="31">
         <activity
-            android:name=".SignUpScreen"
-            android:exported="false" />
+            android:name=".ui.SignUpScreen"
+            android:exported="false" >
+
+
+        </activity>
         <activity
             android:name=".ui.LoginScreen"
             android:exported="false" />
@@ -26,6 +29,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name=".ui.HomeScreen"
