--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,16 @@
         android:theme="@style/Theme.LemoMall"
         tools:targetApi="31">
         <activity
+            android:name=".OrdersScreen"
+            android:exported="false" />
+        <activity
+            android:name=".ui.BasketScreen"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".ui.GreenFruits"
             android:exported="false">
             <meta-data
