--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,25 @@
         android:theme="@style/Theme.LemoMall"
         tools:targetApi="31">
         <activity
-            android:name=".ui.SignUpScreen"
-            android:exported="false" >
-
+            android:name=".ui.AcceptanceOrderScreen"
+            android:exported="false">
 
         </activity>
+        <activity
+            android:name=".ui.AccountScreen"
+            android:exported="false">
+
+        </activity>
+        <activity
+            android:name=".ui.SignUpScreen"
+            android:exported="false"> </activity>
         <activity
             android:name=".ui.LoginScreen"
             android:exported="false" />
         <activity
             android:name=".ui.SplashScreen"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
