Final commit for version one

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LemoMall"
         tools:targetApi="31">
+
         <activity
             android:name=".ui.AcceptanceOrderScreen"
             android:exported="false">
@@ -30,8 +31,16 @@
             android:exported="false" />
         <activity
             android:name=".ui.SplashScreen"
-            android:name=".OrdersScreen"
-            android:exported="false" />
+            android:exported="true" >
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+
+        </activity>
         <activity
             android:name=".ui.BasketScreen"
             android:exported="false">
@@ -68,23 +77,18 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".ui.HomeScreen"
-            android:exported="true">
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
-        </activity>
-        <activity
-            android:name=".ui.HomeScreen"
+            android:name=".ui.OrdersScreen"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <activity
+            android:name=".ui.HomeScreen"
+            android:exported="false">
+
+        </activity>
+
     </application>
 
 </manifest>
